--- a/main.css
+++ b/main.css
@@ -48,3 +48,46 @@ body,html{
     width: 100%;
     height: 100%;
 }
+#menubut{
+    width: 200px;
+    font-size: 40px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    background-color: rgba(0,0,0,0.7);
+    border: 2px solid rgba(255,255,255,0.5);
+    color: #fff;
+    border-radius: 10px;
+}
+#menu{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#menu figure{
+    font-size: 40px;
+    color: #fff;
+    position: relative;
+    top: 200px;
+}
+#menu figure figcaption{
+    text-align: center;
+    padding: 5px;}
+
+#menu figure ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+#menu figure ul li button{
+    width: 200px;
+    height: 100px;
+    font-size: 50px;
+    background-color: rgba(0,0,0,0.4);
+    color: #fff;
+    border: solid #fff 2px;
+}
