--- a/main.css
+++ b/main.css
@@ -1,10 +1,25 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 body,html{
     width: 100%;
     height: 100%;
+}
+body{
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+}
+button{
+    min-width: 100px;
+    height: 50px;
+    background-color: rgba(0,0,0,0.4);
+}
+button.select{
+    background-color:rgba(255,255,255,0.5);
 }
 #base_wrapper{
     position: relative;
@@ -80,6 +95,30 @@ body,html{
     color: #fff;
     border-radius: 10px;
 }
+#sliderset{
+    position: absolute;
+    height: 42px;
+    width:50vmin;
+    border: inset 2px #ccc;
+    background-color: rgba(0,0,0,0.5);
+    bottom: 20px;
+    left: 20px;
+    box-sizing: border-box;
+}
+#sliderset div{
+    height: 40px;
+    width: 80px;
+    min-width: 80px;
+    background-color: #fff;
+    box-sizing: border-box;
+    border:1px #fff outset;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#sliderset div.ret{
+    transition: left 0.3s cubic-bezier(.01, .56, .25, 1) 0s;
+}
 #menu{
     width: 100%;
     height: 100%;
@@ -133,11 +172,12 @@ body,html{
 #menu ul#kind li button{
     font-size: 15px;
 }
-button{
-    min-width: 100px;
-    height: 50px;
-    background-color: rgba(0,0,0,0.4);
-}
-button.select{
-    background-color:rgba(255,255,255,0.5);
+#deb{
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    width: 50%;
+    transform: translate(-50%,-50%);
+    color: #000;
+    background-color: #fff;
 }
