--- a/main.css
+++ b/main.css
@@ -95,6 +95,14 @@ button.select{
     color: #fff;
     border-radius: 10px;
 }
+#centerTrim{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 2px solid rgba(255,255,255,0.5);
+    color: #fff;
+    border-radius: 10px;
+}
 #sliderset{
     position: absolute;
     height: 42px;
