--- a/main.css
+++ b/main.css
@@ -17,6 +17,10 @@ button{
     min-width: 100px;
     height: 50px;
     background-color: rgba(0,0,0,0.4);
+    outline: none;
+}
+button:active,button:focus{
+    background-color: rgba(255,255,255,0.3);
 }
 button.select{
     background-color:rgba(255,255,255,0.5);
@@ -127,6 +131,39 @@ button.select{
 #sliderset div.ret{
     transition: left 0.3s cubic-bezier(.01, .56, .25, 1) 0s;
 }
+#dragSliderset{
+    background-image:url('data:image/svg+xml;utf8,<svg width="50" height="30" xmlns="http://www.w3.org/2000/svg"><g><line fill="none" stroke="#ffffff" stroke-width="1.5" x1="25.8125" y1="13.54159" x2="25.8125" y2="0.03935" id="svg_2" stroke-linejoin="undefined" stroke-linecap="undefined"/><line fill="none" stroke-width="1.5" x1="32.06246" y1="8.79161" x2="32.06246" y2="0.03935" id="svg_4" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="38.31243" y1="8.79161" x2="38.31243" y2="0.03935" id="svg_5" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="44.81239" y1="8.79161" x2="44.81239" y2="0.03935" id="svg_6" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="19.43753" y1="8.79161" x2="19.43753" y2="0.03935" id="svg_11" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="6.9376" y1="8.79161" x2="6.9376" y2="0.03935" id="svg_13" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="13.43757" y1="8.79161" x2="13.43757" y2="0.03935" id="svg_14" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke="#ffffff" stroke-width="1.5" x1="0.68763" y1="13.54159" x2="0.68763" y2="0.03935" id="svg_15" stroke-linejoin="undefined" stroke-linecap="undefined"/></g></svg>');
+    background-repeat: repeat-x;
+    background-position: center top;
+    background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 50px;
+    width: 70vmin;
+}
+@media screen and (orientation: landscape){
+#dragSliderset{
+    top: 10px;
+    }
+}
+@media screen and (orientation: portrait){
+#dragSliderset{
+    bottom: 100px;
+    }
+}
+#dragSliderbutt{
+    height: 40px;
+    width: 80px;
+    min-width: 80px;
+    background-color: #fff;
+    box-sizing: border-box;
+    border: 1px #fff outset;
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    font-size: 20px;
+}
 #menu{
     width: 100%;
     height: 100%;
@@ -186,6 +223,7 @@ button.select{
     left: 50%;
     width: 50%;
     transform: translate(-50%,-50%);
-    color: #000;
-    background-color: #fff;
+    color: #fff;
+    background-color: rgba(0,0,0,0.6);
+    font-size: 9px;
 }
