--- a/main.css
+++ b/main.css
@@ -453,7 +453,8 @@ button.select{
     display: inline-block;
     width: 80px;
     height: 30px;
-    font-size: 30px;
+    font-size: 25px;
+    line-height: 30px;
     text-align: center;
     margin: 10px;
     vertical-align: middle;
